--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,3 +11,21 @@ bind - splitw -v
 unbind %
 bind | splitw -h # horizontal split (prefix |)
 
+set allow-rename off
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+run-shell ~/clone/path/resurrect.tmux
+run-shell ~/clone/path2/continuum.tmux
+set -g @continuum-restore 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
